<resources xmlns:tools="http://schemas.android.com/tools">


    <string name="app_name">Piper Chat</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

    <!--Login -->

    <string name="login_title_tv">LOG IN</string>
    <string name="login_info_tv">Log in with one of the following options.</string>
    <string name="login_email_tv">Email</string>
    <string name="login_pass_tv">Password</string>
    <string name="login_btn">LOGIN</string>
    <string name="login_info_2_tv" tools:ignore="StringEscaping">Don\'t have an account? </string>
    <string name="login_info_3_tv">Sign up</string>
    <string name="login_example_email_et">Enter your email</string>
    <string name="login_example_pass_et">Enter your password</string>
    <string name="login_or">OR</string>
    <string name="login_extra1">By continuing, you agree to our</string>
    <string name="login_extra2"><u>Terms of Service</u>     <u>Privacy Policy</u>  <u>Content Policy</u></string>


    <!--***************-->

    <!--    signup-->

    <string name="signup_title_tv">Sign up</string>
    <string name="signup_info_tv">Sign up with one of the following options.</string>
    <string name="signup_name_tv">Name</string>
    <string name="signup_email_tv">Email</string>
    <string name="signup_pass_tv">Password</string>
    <string name="signup_btn">Create Account</string>
    <string name="signup_info_2_tv">Already have an account? </string>
    <string name="signup_info_3_tv">Log in</string>
    <string name="signup_example_email_et">example@mail.com</string>
    <string name="signup_example_pass_et">Enter your password</string>
    <string name="signup_example_name_et">John Doe</string>
    <string name="signup_image_info">Select an image to upload </string>


    <!--***************-->

</resources>