<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".login"
android:orientation="vertical"
android:background="@color/mate_black"
android:padding="10dp"
    >




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/signup_back_btn"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:background="@drawable/editext_bg"
            android:drawableLeft="@drawable/ic_signup_back" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_title_tv"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            android:padding="35dp"
            />

    </LinearLayout>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/signup_info_tv"
    android:textColor="@color/dark_grey"
    android:textSize="13dp"
    android:textStyle="normal"
    android:paddingLeft="40dp"
    />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="horizontal"
    android:layout_marginLeft="10dp"
    android:layout_gravity="center"
    android:foregroundGravity="center"

    >
    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/signup_google_ac"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_google_ic"
            android:src="@drawable/ic_google"
            android:layout_margin="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/signup_apple_ac"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_apple_ic"
            android:src="@drawable/ic_apple"
            android:layout_margin="10dp"
            />

    </LinearLayout>



</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        >

<!--        <TextView-->
<!--            android:layout_width="180dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:text="@string/signup_image_info"-->
<!--            android:textColor="@color/dark_grey"-->
<!--            android:textSize="16dp"-->
<!--            android:textStyle="bold"-->
<!--            android:gravity="center"-->

<!--            />-->

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/signup_usr_img"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:background="@drawable/profile_pic_round_bg"
            android:src="@drawable/ic_profile_pic"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"
            />




    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_name_tv"
        android:textColor="@color/light_grey"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />
    <EditText
        android:id="@+id/signup_usr_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/signup_example_name_et"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_grey"
        android:textSize="14dp"
        android:textStyle="normal"
        android:gravity="left"
        android:backgroundTint="@color/light_blue_200"
        />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/signup_email_tv"
    android:textColor="@color/light_grey"
    android:textSize="16dp"
    android:textStyle="bold"
    android:layout_margin="10dp"
    />
<EditText
    android:id="@+id/signup_usr_email"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:hint="@string/signup_example_email_et"
    android:inputType="textEmailAddress"
    android:textColor="@color/white"
    android:textColorHint="@color/dark_grey"
    android:textSize="14dp"
    android:textStyle="normal"
    android:gravity="left"
    android:backgroundTint="@color/light_blue_200"
    />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/signup_pass_tv"
    android:textColor="@color/light_grey"
    android:textSize="16dp"
    android:textStyle="bold"
    android:layout_margin="10dp"
    />
<EditText
    android:id="@+id/signup_usr_pass"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:hint="@string/signup_example_pass_et"
    android:inputType="textWebPassword"
    android:textColor="@color/white"
    android:textColorHint="@color/dark_grey"
    android:textSize="14dp"
    android:textStyle="normal"
    android:gravity="left"
    android:backgroundTint="@color/light_blue_200"

    />
<Button
    android:id="@+id/signup_create_btn"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:text="@string/signup_btn"
    android:layout_margin="10dp"
    android:layout_gravity="center"
    />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="10dp"
    android:layout_gravity="center"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_info_2_tv"
        android:textColor="@color/dark_grey"
        android:textSize="14dp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/login_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_info_3_tv"
        android:textColor="@color/light_grey"
        android:textSize="14dp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />


</LinearLayout>



</LinearLayout>
    </ScrollView>
