<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".login"
    android:padding="5dp"
    android:background="@color/matte_red"
  >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title_tv"
            android:textColor="@color/light_grey"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/login_bg_4"
            />



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <EditText
            android:id="@+id/usr_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/login_example_email_et"
            android:inputType="textEmailAddress"
            android:textColor="@color/dark_grey"
            android:textColorHint="@color/light_grey"
            android:textSize="16dp"
            android:textStyle="normal"
            android:gravity="center"
            android:background="@drawable/login_round"
            android:layout_margin="10dp"
            />

        <EditText
            android:id="@+id/usr_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/login_example_pass_et"
            android:inputType="textWebPassword"
            android:textColorHint="@color/light_grey"
            android:textSize="16dp"
            android:textColor="@color/dark_grey"
            android:textStyle="normal"
            android:gravity="center"
            android:background="@drawable/login_round"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/login_btn"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_google_ic"
            />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_or"
        android:textColor="@color/light_grey"
        android:gravity="center"
        android:layout_margin="15dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_info_2_tv"
            android:textColor="@color/light_grey"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/signup_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_info_3_tv"
            android:textColor="@color/light_grey"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:gravity="center"

        >
        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/login_google_ac"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_apple_ic"
                android:src="@drawable/ic_google"
                android:layout_margin="15dp"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/login_apple_ac"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_apple_ic"
                android:src="@drawable/ic_apple"
                android:layout_margin="15dp"
                android:gravity="center"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_extra1"
            android:textSize="12dp"
            android:textColor="@color/light_grey"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_extra2"
            android:textSize="12dp"
            android:textColor="@color/light_grey"
            android:gravity="center"
            />

    </LinearLayout>



</LinearLayout>
</ScrollView>